# laminar

./: CMakeLists.txt  external.cmake  laminar.conf
debian/: README.Debian  README.source  changelog  control  copyright  laminar.conf  laminar.install  laminar.service  laminar.templates  postinst  rules
debian/patches/: 0001-Use-CMake-for-building-dependencies.patch  0002-database-types-for-32bit.patch  0003-relocate-to-laminar-path.patch  series
src/: database.cpp  database.h  resources.cpp  resources.h  server.cpp
src/resources/: body.html  head.html
src/resources/js/: app.js
